--- a/index.html
+++ b/index.html
@@ -5,80 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kathan Shah - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Kathan Shah</h1>
-            <p>Email: <a href="mailto:kath9266@gmail.com">kath9266@gmail.com</a> | Phone: +91 6355335979</p>
-            <p>Location: Vadodara, Gujarat (ready to relocate)</p>
+            <p>Product Manager | GenAI Enthusiast | SaaS Innovator</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <main>
-        <section id="work-experience">
-            <h2>Work Experience</h2>
-            <div class="experience">
-                <h3>Product Manager</h3>
-                <p><strong>Matrix Comsec, Gujarat</strong> (Oct 2022 – Current)</p>
-                <ul>
-                    <li>Elevator OEM Integration: Partnered with elevator OEMs to design seamless configurations, optimizing elevator usage for 50% more efficient crowd control and contributing to 1+ Cr. project sales in Bangalore and Mumbai.</li>
-                    <li>Blue Collar Project Management: Designed a web-based platform for Gulf region workers, enhancing ticket size by 20% and improving on-site attendance efficiency.</li>
-                </ul>
-            </div>
-            <div class="experience">
-                <h3>Trainee Engineer</h3>
-                <p><strong>Volansys, Gujarat</strong> (Dec 2021 - Sep 2022)</p>
-                <ul>
-                    <li>Executed an AI-driven smart lock system using C programming, Linux, and RTOS, enabling seamless IoT device interoperability with Matter protocol.</li>
-                    <li>Worked on Video Surveillance projects integrating cameras with proprietary NVR systems.</li>
-                </ul>
-            </div>
+        <!-- About Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p id="about-content">
+                Loading content...
+            </p>
         </section>
 
-        <section id="skills">
-            <h2>Skills and Tools</h2>
-            <p>Product Life-Cycle, Hypothesis Testing, PRD, Market Research, Prototyping, Product Demos, API Integration, SaaS, IoT, Gen AI, Agile Scrum, and more.</p>
-        </section>
-
-        <section id="ventures">
-            <h2>Ventures</h2>
-            <div class="venture">
-                <h3>Aachar Vichar Community</h3>
-                <p>Led impactful initiatives to bridge the gap between industry and academics through podcasts, meet-ups, and securing 1L+ SSIP funds.</p>
-            </div>
-            <div class="venture">
-                <h3>Malgadi DDU</h3>
-                <p>Optimized electronics supply chains, boosted brand awareness, and secured partnerships, establishing it as the preferred supplier for tech clubs.</p>
-            </div>
-        </section>
-
+        <!-- Projects Section -->
         <section id="projects">
-            <h2>Technical Projects</h2>
-            <ul>
-                <li><strong>Augmented Reality Whiteboard Marker:</strong> Contactless writing tool for educators, implemented using OpenCV and Python.</li>
-                <li><strong>Automated Object Catcher:</strong> Reduced manufacturing congestion with hardware prototype design featuring microcontrollers.</li>
-                <li><strong>Music Tone-Encrypted Communication System:</strong> Developed robust encryption algorithms for high-security settings using DSP libraries.</li>
+            <h2>Projects</h2>
+            <div id="project-list">
+                <!-- Dynamic content populated by JavaScript -->
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul id="skills-list">
+                <!-- Dynamic content populated by JavaScript -->
             </ul>
         </section>
 
-        <section id="courses">
-            <h2>Courses</h2>
-            <ul>
-                <li>Product Manager Fellowship (NextLeap, Dec'23 - Jan'24)</li>
-                <li>Machine Learning Foundation for Product Managers (Duke University, May '24)</li>
-            </ul>
-        </section>
-
-        <section id="academics">
-            <h2>Academics</h2>
-            <p><strong>B.Tech in Electronics and Communication Engineering</strong> (June 2018 - May 2022)</p>
-            <p>Dharmsinh Desai University, Gujarat</p>
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Let's connect for collaborations or projects!</p>
+            <p>Email: <a href="mailto:kath9266@gmail.com">kath9266@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/kathanshah" target="_blank">linkedin.com/in/kathanshah</a></p>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Kathan Shah. All rights reserved.</p>
+        <p>© 2024 Kathan Shah. Built with passion and purpose.</p>
     </footer>
 </body>
 </html>
