--- a/index.html
+++ b/index.html
@@ -3,62 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kathan Shah - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <title>Kathan Shah - Product Manager Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
+    <!-- Landing Section -->
+    <header class="hero">
+        <div class="hero-content">
             <h1>Kathan Shah</h1>
-            <p>Product Manager | GenAI Enthusiast | SaaS Innovator</p>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <p>Product Manager specializing in B2B SaaS, IoT, and GenAI solutions.</p>
+            <a href="#about" class="button">Get to Know Me</a>
         </div>
     </header>
 
-    <main>
-        <!-- About Section -->
-        <section id="about">
-            <h2>About Me</h2>
-            <p id="about-content">
-                Loading content...
-            </p>
-        </section>
+    <!-- About Section -->
+    <section id="about" class="about">
+        <h2>About Me</h2>
+        <p>I am a Product Manager with over 2 years of experience in B2B SaaS and IoT. My journey from engineering to product management has allowed me to bridge technical expertise with customer needs, delivering impactful solutions. Currently, I am working on an e-tender management tool as a side project and exploring the GenAI space.</p>
+    </section>
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2>Projects</h2>
-            <div id="project-list">
-                <!-- Dynamic content populated by JavaScript -->
-            </div>
-        </section>
-
-        <!-- Skills Section -->
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul id="skills-list">
-                <!-- Dynamic content populated by JavaScript -->
+    <!-- Work Experience Section -->
+    <section id="experience" class="experience">
+        <h2>Work Experience</h2>
+        <div class="job">
+            <h3>Product Manager - Matrix Comsec</h3>
+            <p>Oct 2022 - Present</p>
+            <ul>
+                <li><strong>Elevator OEM Integration:</strong> Partnered with elevator OEMs, optimizing elevator usage and driving 1+ Cr. project sales.</li>
+                <li><strong>Blue Collar Project Management:</strong> Developed a web-based platform for the Gulf region, boosting order size by 20%.</li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <!-- Contact Section -->
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Let's connect for collaborations or projects!</p>
-            <p>Email: <a href="mailto:kath9266@gmail.com">kath9266@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/kathanshah" target="_blank">linkedin.com/in/kathanshah</a></p>
-        </section>
-    </main>
+    <!-- Projects & Ventures Section -->
+    <section id="projects" class="projects">
+        <h2>Projects & Ventures</h2>
+        <div class="project">
+            <h3>Augmented Reality Whiteboard</h3>
+            <p>A hygienic solution for educators, utilizing OpenCV for contactless writing. Demonstrated in prototype stage.</p>
+        </div>
+        <div class="project">
+            <h3>Aachar Vichar Community</h3>
+            <p>Co-founded a community bridging the gap between industry and academia through podcasts and meetups.</p>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+        <h2>Skills & Tools</h2>
+        <ul>
+            <li>Product Life-Cycle Management</li>
+            <li>Market Research & Hypothesis Testing</li>
+            <li>Prototyping & System Design</li>
+            <li>Embedded Systems, API Integration, IoT</li>
+            <li>GenAI, Agile Scrum, B2B SaaS</li>
+        </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:kath9266@gmail.com">kath9266@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/kathanshah" target="_blank">linkedin.com/in/kathanshah</a></p>
+    </section>
 
     <footer>
-        <p>© 2024 Kathan Shah. Built with passion and purpose.</p>
+        <p>&copy; 2024 Kathan Shah. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
