--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Kathan Shah</h1>
-            <p>Product Manager specializing in B2B SaaS, IoT, and GenAI solutions.</p>
+            <p>Product Manager specializing in B2B SaaS, IoT, and Mobility solutions.</p>
             <a href="#about" class="button">Get to Know Me</a>
         </div>
     </header>
@@ -19,7 +19,7 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I am a Product Manager with over 2 years of experience in B2B SaaS and IoT. My journey from engineering to product management has allowed me to bridge technical expertise with customer needs, delivering impactful solutions. Currently, I am working on an e-tender management tool as a side project and exploring the GenAI space.</p>
+        <p>I am a Product Manager with over 2 years of experience in B2B SaaS and IoT. My journey from engineering to product management has allowed me to bridge technical expertise with customer needs, delivering impactful solutions. Currently, I am working on an e-tender management tool as a side project.</p>
     </section>
 
     <!-- Work Experience Section -->
